--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,12 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "google/apiclient": "^2.0",
         "laravel/framework": "5.7.*",
+        "laravel/passport": "^7.0",
         "laravel/socialite": "^3.2",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "yoeunes/toastr": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
