removed npm stuff added yarn stuff

--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
         "popper.js": "^1.12",
         "vue": "^2.5.17"
     },
-    "dependencies": {}
+    "dependencies": {
+        "luxon": "^1.10.0",
+        "vue-datetime": "^1.0.0-beta.10",
+        "weekstart": "^1.0.0"
+    }
 }
