--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/css/vue-datetime.css": "/css/vue-datetime.css"
+    "/css/app.css": "/css/app.css"
 }
