--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/passport": "^7.0",
         "laravel/socialite": "^3.2",
         "laravel/tinker": "^1.0",
+        "rollbar/rollbar-laravel": "^4.0",
         "yoeunes/toastr": "^1.1"
     },
     "require-dev": {
