--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "aws/aws-sdk-php": "~3.0",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
         "laravel/framework": "5.7.*",
