--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "aws/aws-sdk-php": "~3.0",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
-        "laravel/framework": "5.7.*",
+        "laravel/framework": "5.8.*",
+        "laravel/helpers": "^1.1",
         "laravel/passport": "^7.0",
         "laravel/socialite": "^3.2",
         "laravel/tinker": "^1.0",
